# mae-research-codebase

./: .gitignore  README.md  clear.py  download_dataset.sh  list.py  mae_research_notebook.py  pyproject.toml  run_keypoints-jigsaw_masking.sh  run_keypoints-jigsaw_masking_mask0.5.sh  run_random-jigsaw_masking.sh  run_random_masking.sh  run_training.sh
notebooks/: mae-classification.ipynb  mae-pretrain.ipynb  visualize_rafdb.ipynb  visualize_rafdb_combined.py
old_src/: classify.py  config.py  pretrain.py
old_src/data/: __init__.py
old_src/models/: __init__.py  autoencoder.py  keypoint_model.py
old_src/utils/: train_keypoints.py
scripts/: run_combined-keypoints-jigsaw-random-mask_masking.sh  run_keypoints-jigsaw_masking_mask0.3.sh  run_keypoints-jigsaw_masking_mask0.4.sh  run_keypoints-jigsaw_masking_mask1.sh  run_random_masking_mask0.4.sh  run_random_masking_mask0.6.sh  run_random_masking_mask0.75.sh  run_training.sh
src/: classify.py  config.py  pretrain.py  train.py  visualize_masking.py  vit_classify.py  vit_pretrain.py
src/config/: vqgan.yaml
src/data/: __init__.py  dataset.py
src/models/: __init__.py  autoencoder.py  keypoint_model.py  models_vit_mae.py  vit_autoencoder.ipynb  vit_autoencoder.py  vit_classifier_head.py
src/taming/models/: vqgan.py
src/util/: datasets.py
src/utils/: __init__.py  masking.py  train_keypoints.py  visualization.py
